# edgesec

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMANDS.md  Dockerfile  Doxyfile.in  ISSUES.md  LICENSE  README.md  config.ini.in  config.mak  conftest.c  dev-config.ini  dev-config.ini.in  glibc.cmake  hello.cc  local-config.ini  version.h.in
lib/libnetlink/: CMakeLists.txt
lib/libnetlink/lib/: CMakeLists.txt  libnetlink.c
src/: CMakeLists.txt  app_config.h  capsrv.c  config.c  config.h  edgesec-recap.c  edgesec.c  engine.c  engine.h  if_service.c  if_service.h  mdnsf.c  recap.c  restsrv.c  revclient.cc  revcmd.h  revsrv.cc  runctl.c  runctl.h  sqlhook.c  sqlsyncsrv.cc  system_checks.c  system_checks.h
src/ap/: CMakeLists.txt  ap_config.h  ap_service.c  ap_service.h  hostapd.c  hostapd.h
src/capture/: CMakeLists.txt  capture_cleaner.c  capture_cleaner.h  capture_config.c  capture_config.h  capture_service.c  capture_service.h  default_analyser.c  default_analyser.h  dns_decoder.c  dns_decoder.h  mdns_decoder.c  mdns_decoder.h  middleware.h  middlewares.c.in  middlewares.h.in  middlewares_list.c.in  middlewares_list.h  ndpi.c  ndpi_analyser.c  ndpi_analyser.h  ndpi_serialiser.c  ndpi_serialiser.h  packet_decoder.c  packet_decoder.h  packet_queue.c  packet_queue.h  pcap_queue.c  pcap_queue.h  pcap_service.c  pcap_service.h  sqlite_header_writer.c  sqlite_header_writer.h  sqlite_meta_writer.c  sqlite_meta_writer.h  sqlite_pcap_writer.c  sqlite_pcap_writer.h  sqlite_sync.cc  sqlite_sync.grpc.pb.cc  sqlite_sync.grpc.pb.h  (+5 more)
src/crypt/: CMakeLists.txt  crypt_config.h  crypt_service.c  crypt_service.h  generic_hsm_driver.c  generic_hsm_driver.h  sqlite_crypt_writer.c  sqlite_crypt_writer.h  zymkey4_driver.c  zymkey4_driver.h
src/dhcp/: CMakeLists.txt  dhcp_config.h  dhcp_config_utils.c  dhcp_config_utils.h  dhcp_service.c  dhcp_service.h  dnsmasq.c  dnsmasq.h  ow_dnsmasq.c  ow_dnsmasq.h
src/dns/: CMakeLists.txt  command_mapper.c  command_mapper.h  dns_config.c  dns_config.h  dns_service.h  ip_mapper.c  ip_mapper.h  mcast.c  mcast.h  mdns-reflector.c  mdns_list.c  mdns_list.h  mdns_mapper.c  mdns_mapper.h  mdns_service.c  mdns_service.h  options.h  reflection_list.c  reflection_list.h  reflector.c  reflector.h
src/firewall/: CMakeLists.txt  firewall_config.h  firewall_service.c  firewall_service.h
src/hostapd/: CMakeLists.txt  config_generator.c  config_generator.h  hostapd_config.c  hostapd_config.h  hostapd_service.c  hostapd_service.h
src/radius/: CMakeLists.txt  attr_mapper.c  attr_mapper.h  common.h  md5.c  md5.h  md5_internal.c  md5_internal.h  radius.c  radius.h  radius_config.h  radius_server.c  radius_server.c.old  radius_server.h  radius_server.h.old  radius_server.old.c  radius_service.c  radius_service.h  wpabuf.c  wpabuf.h
src/subnet/: CMakeLists.txt  subnet_service.c  subnet_service.h
src/supervisor/: CMakeLists.txt  bridge_list.c  bridge_list.h  cmd_processor.c  cmd_processor.h  crypt_commands.c  crypt_commands.h  dev_mapper.c  dev_mapper.h  domain_server.c  domain_server.h  identity.c  identity.h  mac_mapper.c  mac_mapper.h  monitor_commands.c  monitor_commands.h  network_commands.c  network_commands.h  run_analyser.c  run_analyser.h  sqlite_alert_writer.c  sqlite_alert_writer.h  sqlite_fingerprint_writer.c  sqlite_fingerprint_writer.h  sqlite_macconn_writer.c  sqlite_macconn_writer.h  subscriber_events.c  subscriber_events.h  supervisor.c  supervisor.h  supervisor_config.h  supervisor_utils.c  supervisor_utils.h  system_commands.c  system_commands.h
src/system/: CMakeLists.txt  system_checks.c  system_checks.h
src/utils/: CMakeLists.txt  allocs.c  allocs.h  attributes.h  base64.c  base64.h  cryptou.c  cryptou.h  domain.c  domain.h  eloop.c  eloop.h  ename.h  hash.c  hash.h  hashmap.c  hashmap.h  if.c  if.h  iface.c  iface.h  iface_mapper.c  iface_mapper.h  ifaceu.c  ifaceu.h  ipgen.c  ipgen.h  iptables.c  iptables.h  iw.c  iw.h  list.h  log.c  log.h  minGlue.h  minIni.c  minIni.h  net.c  net.h  nl.c  (+16 more)
tests/: CMakeLists.txt  client  client.c  fileserver.c  server  server.c  test-config.ini.in  test_config.c  test_edgesec.c  test_engine.c  test_if_service.c  test_mac_mapper.c  test_runctl.c
tests/ap/: CMakeLists.txt  test_ap_service.c  test_ap_service_failure.c  test_config_generator.c  test_hostapd.c
tests/capture/: CMakeLists.txt  test_capture_config.c  test_capture_service.c  test_default_analyser.c  test_header_middleware.c  test_ndpi_analyser.c  test_packet_queue.c  test_pcap_middleware.c  test_pcap_queue.c  test_pcap_service.c  test_sqlite_header_writer.c  test_sqlite_pcap.c  test_sqlite_pcap_writer.c
tests/crypt/: CMakeLists.txt  test_crypt_service.c  test_sqlite_crypt_writer.c
tests/data/: test.pcap
tests/dhcp/: CMakeLists.txt  test_dhcp_config_utils.c  test_dhcp_service.c  test_dnsmasq.c
tests/dns/: CMakeLists.txt  test_command_mapper.c  test_mdns_list.c  test_mdns_mapper.c  test_mdns_service.c  test_reflection_list.c
tests/hostapd/: CMakeLists.txt  test_config_generator.c
tests/radius/: CMakeLists.txt  eap_test_peer.c  eap_test_server.c  ip_addr.c  ip_addr.h  radius_client.c  radius_client.h  test_libeap.c  test_radius_server.c
tests/subnet/: CMakeLists.txt  test_subnet_service.c
tests/supervisor/: CMakeLists.txt  test_bridge_list.c  test_cmd_processor.c  test_dev_mapper.c  test_domain_server.c  test_mac_mapper.c  test_sockctl_server.c  test_sqlite_fingerprint_writer.c  test_sqlite_macconn_writer.c  test_supervisor.c  test_supervisor_utils.c
tests/system/: CMakeLists.txt  test_system_checks.c
tests/utils/: CMakeLists.txt  __wrap_uwrt_init_context.c  test_eloop.c  test_eloop_handles_null.c  test_eloop_threaded.c  test_hashmap.c  test_if.c  test_iface_mapper.c  test_ifaceu.c  test_iw.c  test_log_err.c  test_log_level.c  test_log_thread_safe.c  test_minIni.c  test_net.c  test_nl.c  test_os.c  test_sqliteu.c  test_squeue.c  test_uci_wrt.c  test_utarray.c  test_wrap_log_error.c  tmpdir.c  tmpdir.h  wrap_log_error.c  wrap_log_error.h
(+722 files in other folders)
